tests/snapshots/files__if_interval-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 1
@main(v0: int) {
.b1_:
  c2_: bool = const true;
  print c2_;
}
