tests/snapshots/files__if_interval-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main(v0: int) {
.b1_:
  c2_: bool = const true;
  c3_: int = const 1;
  v4_: bool = lt v0 c3_;
  c5_: int = const 0;
  c6_: int = const 3;
  v7_: int = id c6_;
  br v4_ .b8_ .b9_;
.b8_:
  v7_: int = id c5_;
.b9_:
  print c2_;
}
