tests/snapshots/files__if_invariant_abs_dont_pull_out-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: -20
@abs(v0: int): int {
.b1_:
  c2_: int = const 0;
  v3_: bool = lt v0 c2_;
  v4_: int = id v0;
  br v3_ .b5_ .b6_;
.b5_:
  c7_: int = const -1;
  v8_: int = mul c7_ v0;
  v4_: int = id v8_;
  ret v4_;
  jmp .b9_;
.b6_:
  ret v4_;
.b9_:
}
@unrelated_fn(v0: int, v1: int): int {
.b2_:
  c3_: int = const 3;
  v4_: int = div v1 c3_;
  v5_: int = div v0 v4_;
  ret v5_;
}
@other_unrelated_fn(v0: int, v1: int): int {
.b2_:
  c3_: int = const 5;
  v4_: int = div v0 c3_;
  v5_: int = div v1 v4_;
  ret v5_;
}
@main(v0: int) {
.b1_:
  c2_: int = const 0;
  v3_: bool = gt v0 c2_;
  v4_: bool = lt v0 c2_;
  v5_: int = id v0;
  br v4_ .b6_ .b7_;
.b6_:
  c8_: int = const -1;
  v9_: int = mul c8_ v0;
  v5_: int = id v9_;
.b7_:
  c10_: int = const 2;
  v11_: int = mul c10_ v5_;
  br v3_ .b12_ .b13_;
.b12_:
  v14_: int = add v0 v11_;
  v15_: int = sub v14_ v0;
  c16_: int = const 3;
  v17_: int = div v15_ c16_;
  v18_: int = div v0 v17_;
  v19_: int = id v18_;
  print v19_;
  ret;
  jmp .b20_;
.b13_:
  c21_: int = const 0;
  v22_: bool = lt v0 c21_;
  v23_: int = id v0;
  br v22_ .b24_ .b25_;
.b24_:
  c26_: int = const -1;
  v27_: int = mul c26_ v0;
  v23_: int = id v27_;
  v28_: int = add v11_ v23_;
  v29_: int = add v0 v28_;
  c30_: int = const 5;
  v31_: int = div v0 c30_;
  v32_: int = div v29_ v31_;
  v19_: int = id v32_;
  print v19_;
  ret;
  jmp .b20_;
.b25_:
  v28_: int = add v11_ v23_;
  v29_: int = add v0 v28_;
  c30_: int = const 5;
  v31_: int = div v0 c30_;
  v32_: int = div v29_ v31_;
  v19_: int = id v32_;
  print v19_;
  ret;
.b20_:
}
