tests/snapshots/files__if_invariant_abs_dont_pull_out_target-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: -20
@abs(v0: int): int {
.b1_:
  c2_: int = const 0;
  v3_: bool = lt v0 c2_;
  v4_: int = id v0;
  br v3_ .b5_ .b6_;
.b5_:
  c7_: int = const -1;
  v8_: int = mul c7_ v0;
  v4_: int = id v8_;
  ret v4_;
  jmp .b9_;
.b6_:
  ret v4_;
.b9_:
}
@unrelated_fn(v0: int, v1: int): int {
.b2_:
  c3_: int = const 3;
  v4_: int = div v1 c3_;
  v5_: int = div v0 v4_;
  ret v5_;
}
@other_unrelated_fn(v0: int, v1: int): int {
.b2_:
  c3_: int = const 5;
  v4_: int = div v0 c3_;
  v5_: int = div v1 v4_;
  ret v5_;
}
@main(v0: int) {
.b1_:
  c2_: int = const 0;
  v3_: bool = lt c2_ v0;
  v4_: bool = lt v0 c2_;
  v5_: int = id v0;
  br v4_ .b6_ .b7_;
.b6_:
  c8_: int = const -1;
  v9_: int = mul c8_ v0;
  v5_: int = id v9_;
.b7_:
  c10_: int = const 2;
  v11_: int = mul c10_ v5_;
  br v3_ .b12_ .b13_;
.b12_:
  c14_: int = const 3;
  v15_: int = div v11_ c14_;
  v16_: int = div v0 v15_;
  v17_: int = id v16_;
  print v17_;
  ret;
  jmp .b18_;
.b13_:
  c19_: int = const 5;
  v20_: int = div v0 c19_;
  v21_: int = div v11_ v20_;
  v17_: int = id v21_;
  print v17_;
  ret;
.b18_:
}
