tests/snapshots/files__if_invariant_do_pull_out-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 20
@unrelated_fn(v0: int): int {
  c1_: int = const 4;
  v2_: int = div v0 c1_;
  ret v2_;
}
@other_unrelated_fn(v0: int): int {
  c1_: int = const 3;
  c2_: int = const 5;
  v3_: int = div v0 c2_;
  v4_: int = mul c1_ v3_;
  ret v4_;
}
@main(v0: int) {
  c1_: int = const 0;
  v2_: bool = gt v0 c1_;
  v3_: int = abs v0;
  c4_: int = const 2;
  v5_: int = mul c4_ v3_;
  br v2_ .b6_ .b7_;
.b6_:
  c8_: int = const 4;
  v9_: int = div v0 c8_;
  v10_: int = abs v0;
  v11_: int = add v10_ v5_;
  v12_: int = add v11_ v9_;
  v13_: int = id v12_;
  print v13_;
  ret;
  jmp .b14_;
.b7_:
  v15_: int = abs v0;
  v16_: int = add v15_ v5_;
  c17_: int = const 3;
  c18_: int = const 5;
  v19_: int = div v0 c18_;
  v20_: int = mul c17_ v19_;
  v21_: int = add v16_ v20_;
  v13_: int = id v21_;
  print v13_;
  ret;
.b14_:
}
