tests/snapshots/files__if_print_do_specialize_target-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 2 2
@main(v0: int, v1: int) {
.b2_:
  v3_: int = mul v0 v0;
  v4_: int = mul v0 v3_;
  v5_: int = mul v0 v4_;
  v6_: int = mul v0 v5_;
  v7_: int = mul v0 v6_;
  v8_: bool = eq v1 v7_;
  br v8_ .b9_ .b10_;
.b9_:
  v11_: int = mul v1 v1;
  v12_: int = id v11_;
  print v12_;
  ret;
  jmp .b13_;
.b10_:
  v14_: int = mul v0 v0;
  v15_: int = mul v0 v14_;
  v16_: int = mul v0 v15_;
  v17_: int = mul v0 v16_;
  v18_: int = mul v0 v17_;
  v19_: int = mul v1 v18_;
  v12_: int = id v19_;
  print v12_;
  ret;
.b13_:
}
